--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -3,6 +3,8 @@ ja:
     models:
       post: 
         title: "タイトル"
+      user:
+        name: "名前"
   datetime:
     distance_in_words:
       half_a_minute: "30秒前後"
