--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -42,3 +42,9 @@ ja:
       over_x_years:
         one:   "1年以上"
         other: "%{count}年以上"
+  enum:
+    article:
+      news_type:
+        other: "その他"
+        notice: "お知らせ"
+        update: "アップデート"
