--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -42,6 +42,7 @@ ja:
       over_x_years:
         one:   "1年以上"
         other: "%{count}年以上"
-  other: "その他"
-  notice: "お知らせ"
-  update: "アップデート"
+  news_type:
+    other: "その他"
+    notice: "お知らせ"
+    update: "アップデート"
